--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -30,7 +30,7 @@
               <p>
                 <strong>Lugar</strong> Hotel Cosmos Salón Finestra Av Calle 116 No. 18-60 <br />
                 <strong>Fecha</strong> 21 y 22 de marzo 2019 <br />
-                <br /><strong><a routerLink="/eventos" style="color: rgb(114, 114, 114)">Más Información
+                <strong><a routerLink="/eventos" style="color: rgb(114, 114, 114)">Más Información
                     Aquí</a></strong><br />
               </p>
             </div>
